...
            "state" : "translated",
            "value" : "關於"
          }
        }
      }
    },
    "关闭" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Close"
...
            "state" : "translated",
            "value" : "建立並連線"
          }
        }
      }
    },
    "创建新 Session" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Create New Session"
...
            "state" : "translated",
            "value" : "建立網路"
          }
        }
      }
    },
    "删除" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete"
...
            "state" : "translated",
            "value" : "可選取多個群組，也可以不選；不選時指令碼會歸為未分組。"
          }
        }
      }
    },
    "可恢复" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Restorable"
...
            "state" : "translated",
            "value" : "新增資料夾"
          }
        }
      }
    },
    "新建终端" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "New terminal"
...
            "state" : "translated",
            "value" : "暫無私有網路設定"
          }
        }
      }
    },
    "暂无终端" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "No Terminals"
...
            "state" : "translated",
            "value" : "橙"
          }
        }
      }
    },
    "正在创建终端…" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Creating terminal…"
...
            "state" : "translated",
            "value" : "終止 Session"
          }
        }
      }
    },
    "终端" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Terminal"
...
            "state" : "translated",
            "value" : "終端"
          }
        }
      }
    },
    "终端会话" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Terminal sessions"
...
            "state" : "translated",
            "value" : "進入終端"
          }
        }
      }
    },
    "远程 Session 已不存在" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Remote Session No Longer Exists"
...
            "state" : "translated",
            "value" : "選擇現有映像"
          }
        }
      }
    },
    "选择持久终端" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Select Persistent Terminal"
...
